--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "asianamericanfoods",
   "version": "0.1.0",
-  "homepage": "https://abhigattineni.github.io/asianamericanfoods",
+  "homepage": "https://aafoodsus.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
